Добавлена глава про дифракцию Френеля

--- a/em.tex
+++ b/em.tex
@@ -9,6 +9,7 @@
 \usepackage{tikz}
 \usepackage{settobox}
 \usepackage{pgfplots}
+\usepackage{indentfirst,misccorr}
 \usetikzlibrary{arrows}
 \usetikzlibrary{calc}
 \usetikzlibrary{%
@@ -16,7 +17,7 @@
     decorations.pathmorphing,%
     decorations.markings%
 }
-
+\usetikzlibrary{decorations.shapes}
 
 \usepackage[utf8]{input enc}
 \usepackage[english, russian]{babel}
@@ -3122,7 +3123,7 @@ I = I_1 + I_2 + 2\sqrt{I_1 I_2} \cos (\phi_2 - \phi_1).
       \sin \theta$} to [out=180,in=-60] (1.5,0);
     \draw (a) -- ++(-1.2,0);
     \draw (b) -- ++(-1.2,0);
-    \draw[very thick,<->] (0,0) -- ++(0,4) node[midway,left] {$d$};
+    \draw[blue,thick,<->] (0,0) -- ++(0,4) node[midway,left] {$d$};
     \draw[blue,thick,->] (-0.5,5) node[black,above] {$A\sin (\omega t + \alpha)$} to [out=-90,in=135] ($(b)+(-0.2,0.2)$);
     \draw[blue,thick,->] (-0.5,-1) node[black,below] {$A\sin \omega t$} to [out=90,in=225] ($(a)+(-0.2,-0.2)$);
   \end{tikzpicture}
@@ -3157,10 +3158,14 @@ I = 4I_0 \cos^2 \left( \frac{\phi_2 - \phi_1}{2} \right) = 4I_0 \cos^2 \left( \f
 
 Графически (в частном случае $\alpha = 0$, $d = 20 \lambda $) это выглядит так: 
 
-\begin{figure}[h]
-  \centering
-  \includegraphics[scale=1]{interference_plot.pdf}
-\end{figure}
+\begin{center}
+  \begin{tikzpicture}
+    \begin{axis}[ymin=0,ymax=4.5,grid=major,height=8cm,width=8cm,xlabel={$x$},ylabel={$I(x)$}]
+      \addplot[samples=1000,domain=-2*3.14:2*3.14,red,thick]
+      gnuplot[id=cos]{4*cos(20*3.14*x/50)*cos(20*3.14*x/50)};
+    \end{axis}
+  \end{tikzpicture}
+\end{center}
 
 Обратим внимание, что этот график уже интересен: на далеком экране мы
 увидим чередующиеся светлые (интенсивностью $4I_0$) и темные (минимумы
@@ -3188,7 +3193,7 @@ I = 4I_0 \cos^2 \left( \frac{\phi_2 - \phi_1}{2} \right) = 4I_0 \cos^2 \left( \f
     \draw[very thick] (1,3) node[above=15,right] {$S$} -- (3,4.5) node[above left] {1} -- (8,5.5) node[right] {$P$};
     \draw[very thick] (1,3) -- (3,1.5) node[below left] {2} -- (8,5.5);
     \draw[blue,dashed,thick] (3,3) -- (8,5.5);
-    \draw[red,thick] (3,4.5) -- ($(3,1.5)!(3,4.5)!(8,5.5)$);
+    \draw[red] (3,4.5) -- ($(3,1.5)!(3,4.5)!(8,5.5)$);
 
     \draw[blue,thick,<->] (3,0.5) -- (8,0.5) node[midway,below] {$D$};
     \draw (5,5.3) node {$r_1$};
@@ -3228,7 +3233,7 @@ I(x) = 4 I_0 \cos^2 \left( \frac{\pi d x}{D \lambda} \right)
 расположенные параллельные линии, которые и используются в качестве
 щелей.
 
-\subsection{Два простых эксперимента II. Плоскопараллельная пластинка.}
+\subsection{Плоскопараллельная пластинка.}
 Еще один интересный эффект связан с прохождением света через тонкую стеклянную пластинку. 
 
 \begin{figure}[h]
@@ -3240,7 +3245,7 @@ I(x) = 4 I_0 \cos^2 \left( \frac{\pi d x}{D \lambda} \right)
     \draw[thick] (0,4) -- ++(8,0);
     \draw[thick] (0,2) -- ++(8,0);
     \draw[dashed,blue] (2,5) -- ++(0,-3);
-    \draw[red,thick] (5,2) -- ($(3,2)!(5,2)!(5,0)$) node[black,below left] {$D$};
+    \draw[red,thick,dashed] (5,2) -- ($(3,2)!(5,2)!(5,0)$) node[black,below left] {$D$};
     \draw[postaction=decorate,very thick] (0,6) -- (2,4);
     \draw[postaction=decorate,very thick] (2,4) -- (3,2) node[below=10,left=-3] {$A$};
     \draw[postaction=decorate,very thick] (3,2) -- (4,4) node[above] {$B$};
@@ -3313,7 +3318,7 @@ I = \frac{E^2}{(1-r^2)^2 + 4 r^2 \sin^2 \cfrac{\delta}{2}}.
   \begin{tikzpicture}
     \begin{axis}[ymin=0,ymax=12,grid=major,height=8cm,width=8cm,xlabel={$\delta$},ylabel={$I(\delta)$},axis
       equal]
-      \addplot[samples=100,domain=0:12]
+      \addplot[samples=100,domain=0:12,thick,red]
       gnuplot[id=sin]{6/(0.75*0.75+sin(x/2)*sin(x/2))};
     \end{axis}
   \end{tikzpicture}
@@ -3325,6 +3330,313 @@ I = \frac{E^2}{(1-r^2)^2 + 4 r^2 \sin^2 \cfrac{\delta}{2}}.
 интерференционные полосы в фокальной плоскости линзы --- просто
 концентрические кольца с центром на оси линзы.
 
+\subsection{Дифракция.}
+\label{sec:difraction}
+\subsubsection{Подготовительные процедуры.}
+\label{sec:difraction_intro}
+
+Под дифракцией света обычно понимают отклонения от простых законов
+геометрической оптики. Самая общая постановка задачи дифракции
+выглядит так: пусть даны некие препятствия, на которые падает
+электромагнитная волна. Как будет выглядеть распределение
+интенсивности на экране?
+
+Это очень сложная (с математической точки зрения) задача. Точное
+решение основано на решении волнового уравнения с граничными условиями
+(в общем случае строгое решение такой задачи дать нельзя). В
+большинстве случаев, однако, можно пользоваться приближением Гюйгенса--Френеля.
+
+\subsubsection{Принцип Гюйгенса.}
+\label{sec:huygens}
+
+\textbf{Принцип Гюйгенса.} Каждую точку, в которую пришла волна, можно принять за центр вторичных волн, распространяющихся во все стороны. Результирующая волна рассматривается как наложение вторичных волн.
+
+\textbf{Принцип Гюйгенса -- Френеля.} Полное световое поле~---~результат интерференции вторичных волн.
+
+На основе этого принципа можно сосчитать распределение интенсивности излучения. 
+
+\subsubsection{Зависимость интенсивности от расстояния.}
+\label{sec:intensity_distance}
+
+Рассмотрим точечный источник света интенсивностью $I$, окруженный
+сферой радиуса $r$. Интенсивность, как плотность потока энергии,
+обратно пропорциональна площади, т.е. $I \sim r^{-2}$. Поле на этой
+сфере, тем самым, так зависит от $r$:
+
+\begin{equation}
+E = \frac{\const}{r} e^{i k r}
+\end{equation}
+
+\subsubsection{Математическое выражение принципа Гюйгенса--Френеля.}
+
+Рассмотрим какой-нибудь экран с отверстием. Нашей задачей является
+определение интенсивности света в любой точке $P$ за экраном. Основное
+приближение состоит в том, что в точках отверстия поле такое же, как
+если бы экрана вовсе не было. Во всех точках непосредственно за
+экраном поле может быть положено равным нулю. Заметим, что в явлениях
+дифракции имеет значение только форма края отверстия.
+
+\begin{wrapfigure}{l}{40mm}
+  \begin{center}
+    \begin{tikzpicture}[decoration={%
+        markings,%
+        mark=at position 0.65 with {\arrow[black]{latex};}}]
+      \draw[thick] (0,4) -- (0,3) (0,1) -- (0,0);
+      \draw[dashed,thick] (0,3) arc (60:-60:1.15);
+      \coordinate (p) at (3.5,2.5);
+      \draw[postaction=decorate] (0.5,2.5) -- (p) {node[right] {$P$} node[midway,below] {$R$}};
+      \draw[->] (0.5,2.5) -- ++(25:1.5cm) node[midway,above] {$\vec{n}$};
+      \draw[blue] (1,2.5) arc (0:25:0.5cm);
+      \draw[blue] (1.2,2.65) node {\footnotesize{$\alpha$}};
+    \end{tikzpicture}
+  \end{center}
+  \label{fig:huygens_fresnel}
+\end{wrapfigure}
+
+Проведем какую-нибудь поверхность, закрывающую отверстие в экране
+(пунктирная линия на рисунке). Разобьем ее на участки с малой площадью
+$dS$ ($\sqrt{dS} > \lambda$). Поле в $P$ мы будем рассматривать как
+результат интерференции вторичных волн, пришедших от каждого такого
+участка. Чему равно поле в точке $P$?
+
+Во-первых, это поле пропорционально значению поля $E$ на самом участке
+$dS$. Во-вторых, оно пропорционально прокции $dS_n$. Это следует из
+того, что какой бы формой не обладал участок, через него будут
+проходить одинаковые лучи, если только проекция $dS_n$ будет
+неизменной.
+
+Итак, поле в $P$ равно $E_P \sim E dS_n$. Кроме того, нужно учесть,
+что точка $P$ находится на расстоянии $R$ от участка площади. Принимая
+во внимание предыдущий пункт, получим:
+
+\begin{equation}
+  dE_P = a(\alpha) E\frac{e^{ikR}}{R} dS_n \Rightarrow E_P = a(\alpha) E \int\limits_{\partial S} \frac{e^{ikR}}{R} dS_n,
+\end{equation}
+где $a(\alpha)$~---~некоторая константа (функция только от $\alpha$),
+которую предстоит определить.
+
+\subsection{Дифракция Френеля на круглом отверстии.}
+\label{sec:diffraction_round}
+\subsubsection{Техника зон Френеля.}
+\label{sec:fresnel_zones}
+Применим полученные навыки для вычисления напряженности поля в точке $P$ за круглым отверстием в экране. 
+
+\begin{wrapfigure}{l}{60mm}
+  \begin{center}
+    \begin{tikzpicture}
+      \draw[thick] (2,5) -- (2,4) (2,2) -- (2,1);
+      \draw (0,3) node[below] {$O$} -- (5,3);
+      \draw[thick,->] (0,3) -- ++(20:4cm) node[above] {$\vec{k}$};
+      \draw[thick,dashed] (2,2) arc (-atan(0.5):atan(0.5):2.23cm);
+      \coordinate (a) at ($(0,3)!2.23cm!20:(6,3)$);
+      \draw (a) -- (5,3) node[below] {$P$};
+      \draw[blue] (1,3) arc (0:20:1cm) node[below=3,right=2]
+      {\footnotesize{$\theta$}};
+      \draw[blue] (1.15,2.7) node {\footnotesize{$r_0$}};
+      \draw[blue] (3.5,2.7) node {\footnotesize{$r$}};
+      \draw[blue] (2.45,2.7) node {\footnotesize{$C$}};
+      \draw[blue] (3.75,3.56) node {\footnotesize{$R$}};
+      \draw[blue] ($(a)!0.5cm!(5,3)$) arc (-20:17:0.5cm) node[below=4,right=-1] {\footnotesize{$\alpha$}};
+    \end{tikzpicture}
+  \end{center}
+  \label{fig:diffraction_round}
+\end{wrapfigure}
+
+
+% \begin{figure}[h]
+%   \centering
+%   \caption{Дифракция Френеля на круглом отверстии.}
+%   \label{fig:diffraction_round}
+% \end{figure}
+
+Для простоты считаем, что источник $O$ и точка $P$ лежат на прямой,
+проходящей через центр отверстия. Закроем отверстие сферой $S$ радиуса
+$r_0$ с центром в источнике. Напряженность поля на всех элементах $dS$
+равна $E = \cfrac{E_0}{r_0} e^{i k r_0}$. Теперь нужно разделить сферу
+на участки, от которых будут идти вторичные волны.
+
+В качестве такого участка возьмем кольцо, все точки которого лежат на
+расстоянии $R$ от точки $P$. Нам нужно посчитать проекцию площади
+этого кольца на нормаль: $dS = dS_n = 2\pi r_0^2 \sin \theta d
+\theta$. Из теоремы косинусов получаем:
+\begin{equation}
+R^2 = r^2 + (r_0 +r)^2 - 2r_0 (r_0 + r) \cos \theta
+\end{equation}
+
+Отсюда, дифференцируя это уравнение, получим:
+
+\begin{equation}
+R dR = r_0 (r_0 + r) \sin \theta d \theta
+\end{equation}
+
+Подставляя это в выражение для площади, получим: 
+
+\begin{equation}
+dS_n = 2 \pi \dfrac{r_0 R}{r_0 + r} dR
+\end{equation}
+
+Используя это соотношение, можно выписать ответ:
+
+\begin{equation} \label{eq:diff_circle}
+E_P = 2 \pi \frac{E_0 e^{i k r_0}}{r_0 + r} \int\limits_{r}^{R_{max}} a(R) e^{i k R} dR
+\end{equation}
+(Тут мы от функции $a(\alpha)$ перешли к $a(R)$).
+
+Ничего не зная о функции $a(R)$, вычислить этот интеграл, конечно,
+нельзя. Вычислим его приближенно, считая, что в интервале $r< R < r +
+\lambda$ функция $a(R)$ остается постоянной. Из точки $P$ опишем
+концентрические сферы с радиусами $r$, $r + \lambda /2$, $r + 2
+(\lambda /2)$, \ldots. Они разобьют поверхность $S$ на кольцевые
+области (\textbf{зоны Френеля}). Тогда интеграл из
+(\ref{eq:diff_circle}) превратится в сумму интегралов по зонам
+Френеля. Каждое слагаемое имеет вид:
+
+\begin{equation}
+a_n \int\limits_{r + (n-1) \lambda /2}^{r + n \lambda /2} e^{i k R}\, dR = a_n \frac{1}{ik} e^{ikr} \left(e^{i \pi n} - e^{i \pi (n-1)} \right) = a_n \frac{e^{ikr}}{ik} e^{i \pi n} \left[1 - e^{-i \pi} \right] = (-1)^n a_n \frac{2e^{ikr}}{ik},
+\end{equation}
+где $a_n$~---~значение функции $a(R)$ в n-ой зоне Френеля. Таким
+образом, вычисление напряженности в точке $P$ сводится к суммированию
+следующего ряда:
+
+\begin{equation} 
+\label{eq:diff_series}
+E_P = \frac{4 \pi i}{k} E_0 \frac{e^{ik (r_0 +r)}}{r_0 + r} (a_1 - a_2 + a_3 - a_4 + \ldots)
+\end{equation}
+
+То, что ряд знакопеременный, указывает, что колебания, вносимые
+соседними зонами Френеля, противоположны по фазе. Вообще, это видно из
+того, что расстояние от соседних зон Френеля до точки $P$ различается
+на полволны.
+
+\begin{figure}[h]
+  \centering
+  \subfloat[Вклад от первой зоны Френеля.]{
+    \begin{tikzpicture}[decoration=triangles]
+      \draw[thick,postaction={draw,decorate}] (2,0) arc (-90:90:2cm);
+      \draw[thick,->] (2,0)  -- (2,4) node[left,midway] {$A_1$};
+      \draw (3.5,0.15) node {$dA_i$};
+    \end{tikzpicture}}
+  \hspace{2cm}
+  \subfloat[Вклад от первых двух зон Френеля.]{\begin{tikzpicture}[decoration=triangles]
+      \draw[thick,postaction={draw,decorate}] (2,0) arc (-90:90:2cm);
+      \draw[thick,postaction={draw,decorate}] (2,4) arc (90:270:1.75cm);
+      \draw[thick,->] (2,0)  -- (2,0.5) node[left,midway] {$A_2$};
+    \end{tikzpicture}}
+  \caption{Векторные диаграммы.}
+  \label{fig:vector_dia}
+\end{figure}
+
+Еще одна хорошая интерпретация, позволяющая понять, что происходит при
+дифракции --- язык векторной диаграммы. Элементарные векторы $dA_i$
+изображают вклад в напряженность в точке $P$ от элементарных колечек
+(но не от зон Френеля!). Вектор $dA_1$ соответствует вторичной волне
+из точки $C$; вектор $dA_2$ --- следующему элементарному колечку и
+т.д., пока колечки не дойдут до границы первой зоны
+Френеля. Просуммировав вектора $dA_i$ получим вектор $A_1$ --- вклад в
+напряженность поля от первой зоны Френеля (слагаемое с $a_1$ в
+(\ref{eq:diff_series})). Эту диаграмму, конечно, можно продолжить и
+далее, считая вклад от второй зоны Френеля. В итоге получится вектор
+$A_2$, противоположный $A_1$ по направлению и почти равный ему по
+модулю. Тем самым, суммарная интенсивность от первых двух зон Френеля
+оказывается очень близкой к нулю.
+
+Таким образом, мы приходим к удивительному выводу: освещенность в
+точке $P$ немонотонно зависит от радиуса отверстия! Действительно,
+пока размеры отверстия не превышают размер первой зоны Френеля,
+интенсивность увеличивается и достигает максимума при полностью
+открытой первой зоне. По мере открывания второй зоны интенсивность
+уменьшается и падает почти до нуля. Затем освещенность снова
+увеличивается и т.д. Итак, если открыто нечетное число зон,
+интенсивность будет максимальной, если четное ---
+минимальной. Заметим, что это предсказание (впрочем, очень хорошо
+подтверждающееся экспериментом) находится в противоречии с
+геометрической оптикой, согласно которой интенсивность никак не
+зависит от размеров отверстия.
+
+\begin{wrapfigure}{l}{40mm}
+  \vspace{-0.7cm}
+  \begin{center}
+    \begin{tikzpicture}[decoration=triangles]
+      \foreach \x in {0,0.3,...,2.1}{
+        \draw[thick] (2,4-\x) arc (90:270:1.85-\x);
+        \draw[thick] (2,\x) arc (-90:90:2-\x);
+      };
+      \draw[very thick,->] (2,0) -- (2,2.1);
+    \end{tikzpicture}
+  \end{center}
+  \label{fig:spiral}
+\end{wrapfigure}
+
+Нашу теорию можно проверить на простом примере. Пусть радиус отверстия
+неограниченно возрастает (это отвечает просто отсутствию
+экрана). Векторная диаграмма тогда будет представлять спираль,
+закручивающуюся к центру; она соответствует всем слагаемым в
+знакопеременном ряде.  Очевидно, что суммарная амплитуда будет равна
+$A_1/2$. На языке ряда это значит, что сумма всего ряда равна половине
+его первого члена:
+
+\begin{equation}
+E_P = \frac{2\pi i}{k} E_0 \frac{e^{i k (r_0 + r)}}{r_0 + r} a_1
+\end{equation}
+
+С другой стороны, свободно распространяющаяся сферическая волна на
+расстоянии $r_0 + r$ от источника имеет напряженность
+
+\begin{equation}
+E_P = E_0 \frac{e^{i k (r_0 + r)}}{r_0 + r}
+\end{equation}
+
+Сравнивая эти два выражения, получаем, что $a_1 =
+-\cfrac{i}{\lambda}$. Теперь наступает время еще раз удивиться ---
+подсчитаем интенсивность в точке $P$ при полностью открытой первой зоне
+Френеля:
+
+\begin{equation}
+I = |E_P|^2 =\left| \frac{16 \pi^2}{k^2} \frac{E_0^2}{(r_0 + r)^2} a_1^2 \right|= 4 \frac{E_0^2}{(r_0+r)^2} = 4I_0
+\end{equation}
+
+Видно, что если бы экрана вообще не было, интенсивность в точке $P$ была
+бы в 4 раза меньше.
+
+% \subsubsection{Зонная пластинка.}
+% Для дальнейшего нам понадобится вычисление радиусов зон Френеля $R_n$. Займемся этим.
+% \pic{\psfrag{O}{O} \psfrag{P}{P} \psfrag{r0}{$r_0$} \psfrag{r}{$r$} \psfrag{r+nl}{$r+ \cfrac{n \lambda}{2}$} \psfrag{R}{R} \psfrag{t}{$\theta$} \psfrag{x}{x}}{1}{fig/18}{l}{-5mm}{-9mm}
+
+% Запишем две теоремы Пифагора:
+% \begin{equation}
+% \begin{split}
+% (r_0 - x)^2 + R^2 &= r_0^2\\
+% (r+x)^2 + R^2 &= \left(r+\cfrac{n \lambda}{2} \right)^2
+% \end{split}
+% \end{equation}
+
+% Будем пренебрегать членами порядка $\lambda^2$ и $x^2$. Вычитая из последнего уравнения первое, получим:
+
+% \begin{equation}
+% x = \frac{r n \lambda}{r+r_0}
+% \end{equation}
+
+% Далее, из первого уравнения видно, что $R^2 = 2 x r_0$. Отсюда имеем:
+
+% \begin{equation} \label{eq:radii_zone}
+% R_n = \sqrt{n \lambda \frac{rr_0}{r+r_0}}
+% \end{equation}
+
+% Например, если $r_0 = r = 1 \mbox{ м}$, $\lambda = 600 \mbox{ нм}$, то $R_1 = 0.55 \mbox{ мм}$. 
+
+% Мы уже обращали внимание, что если оставить открытой только первую зону Френеля, то интенсивность в точке P увеличится в 4 раза. Можно изготовить пластинку, которая оставляет открытыми все нечетные зоны Френеля (\textit{зонная пластинка}). Тогда в знакопеременном ряде останутся только положительные слагаемые, и интенсивность света увеличится во много раз. Это аналогично фокусирующему действию линзы. Действительно, перепишем выражение (\ref{eq:radii_zone}) в виде формулы тонкой линзы:
+
+% \begin{equation}
+% \frac{1}{r_0} + \frac{1}{r} = \frac{1}{f} = \frac{n \lambda}{R_n^2} = \frac{\lambda}{R_1^2}
+% \end{equation}
+
+% \subsubsection{Пятно Пуассона.}
+
+% Обсудим двойственную к рассмотренной выше задачу: дифракцию на круглом экране. Еще один удивительный факт, связанный с дифракцией, состоит в том, что освещенность в центре геометрической тени не равна нулю! 
+
+% \pic{\psfrag{S}{S} \psfrag{P}{P} \psfrag{E}{E} \psfrag{D}{D} \psfrag{A}{A} \psfrag{B}{B} }{1.25}{fig/17}{r}{-5mm}{-5mm}
+
+% Убедиться в этом можно опять-таки с помощью зон Френеля. Круглая пластинка AB вырезает часть волнового фронта; на оставшейся части (EA, BD) мы и должны построить зоны Френеля. Рассуждая аналогично предыдущему пункту, получим, что напряженность поля в точке P равна половине напряженности от первой зоны Френеля (т.е. почти максимальной). Следовательно, каковы бы не были размеры диска AB в точке P должно наблюдаться светлое пятно. Оно--то и называется \textit{пятном Араго--Пуассона} (Пуассон, Араго, 1818).
 
 
 \end{document}
