--- a/README
+++ b/README
@@ -1,3 +1,7 @@
 Конспект лекций по электродинамике
 Летний физический лагерь, июль--август 2010
 Ленинградская область, Россия
+
+Техническое замечание: для компиляции исходника требуется:
+1. gnuplot (для рисования нескольких графиков)
+2. запускать xelatex -shell-escape em_x.tex.
